--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "devDependencies": {
+    "postcss-lit": "^0.5.0",
     "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
+  },
+  "dependencies": {
+    "eslint": "^8.28.0"
   }
 }
