--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "postcss": "^8.4.19",
     "postcss-lit": "^0.5.0",
+    "postcss-loader": "^7.0.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^21.0.0",
